# rust-twentyone-egui

./: Cargo.toml  README.ipynb  README.md
cards/: _cards.csv
img/: movie.mov
src/: main.rs  one.rs
